--- a/index.html
+++ b/index.html
@@ -211,9 +211,8 @@ Since you are here, you get to read one crazy story from each project, enjoy!
         <p>The goal was to discontinue use of Level CMS where several custom applications and integrations were running. By
           moving these integrations to different SharePoint features such as
           <span class="tag">BCS</span>,
-          <span class="tag">User Profiles Mapping</span> and
-          <span class="tag">Service Jobs</span> the amount of custom code was reduces drastically
-          <span class="tag">SharePoint Service Jobs</span>, the actual </p>
+          <span class="tag">User Profiles</span> and
+          <span class="tag">Service Jobs</span> the amount of custom code was reduces drastically.
       </div>
 
     </div>
