--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
       <div class="tags">
         <em>Duration</em>
-        <span class="tag">2 months</span>
+        <span class="tag">2 months (2017)</span>
       </div>
 
       <div class="tags">
@@ -128,7 +128,7 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
       <div class="tags">
         <em>Duration</em>
-        <span class="tag">1 month</span>
+        <span class="tag">1 month (2018)</span>
       </div>
 
       <div class="tags">
@@ -180,7 +180,7 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
       <div class="tags">
         <em>Duration</em>
-        <span class="tag">6 months</span>
+        <span class="tag">6 months (2017)</span>
       </div>
 
       <div class="tags">
@@ -226,7 +226,7 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
       <div class="tags">
         <em>Duration</em>
-        <span class="tag">10 months</span>
+        <span class="tag">10 months (2016)</span>
       </div>
 
       <div class="tags">
