--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 ██╔══██║██║       ██║   ██╔══██║██╔══╝  ██╔══██╗██╔══╝  
 ██║  ██║██║       ██║   ██║  ██║███████╗██║  ██║███████╗
 ╚═╝  ╚═╝╚═╝       ╚═╝   ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚══════╝
-Since you are here, you get to read one crazy story from each project, enjoy!
 -->
 <html>
 
@@ -51,7 +50,12 @@ Since you are here, you get to read one crazy story from each project, enjoy!
     </h2> -->
 
     <div class="project">
-      <h3>Auto Parts catalog</h3>
+      <h3>Auto Aftermarket Retailer</h3>
+
+      <div class="tags">
+        <em>TYPE</em>
+        <span class="tag">Public-facing website</span>
+      </div>
 
       <div class="tags">
         <em>Role</em>
@@ -119,7 +123,12 @@ Since you are here, you get to read one crazy story from each project, enjoy!
     </div>
 
     <div class="project">
-      <h3>Knowledge Base portal</h3>
+      <h3>Corporate Governance NGO</h3>
+
+      <div class="tags">
+        <em>TYPE</em>
+        <span class="tag">Public-facing website</span>
+      </div>
 
       <div class="tags">
         <em>Role</em>
@@ -171,7 +180,12 @@ Since you are here, you get to read one crazy story from each project, enjoy!
       solutions that work both onpremises and online increasing the speed of pushing features to clients by an order of magnitude.</p>
 -->
     <div class="project">
-      <h3>Level CMS to SharePoint Intranet</h3>
+      <h3>Global Accounting Firm</h3>
+
+      <div class="tags">
+        <em>Type</em>
+        <span class="tag">Intranet</span>
+      </div>
 
       <div class="tags">
         <em>Role</em>
@@ -217,7 +231,12 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
     </div>
     <div class="project">
-      <h3>Digital Workspace</h3>
+      <h3>Top US Law Firm</h3>
+
+      <div class="tags">
+        <em>Type</em>
+        <span class="tag">Digital Workspace</span>
+      </div>
 
       <div class="tags">
         <em>Role</em>
@@ -226,7 +245,7 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
       <div class="tags">
         <em>Duration</em>
-        <span class="tag">10 months (2016)</span>
+        <span class="tag">10 months (2016-2017)</span>
       </div>
 
       <div class="tags">
@@ -249,12 +268,93 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
     </div>
 
-    <i>4 more projects to be added here...</i>
+    <div class="project">
+      <h3>Credit Card Operator</h3>
 
+      <div class="tags">
+        <em>Type</em>
+        <span class="tag">Digital Workspace</span>
+      </div>
+
+      <div class="tags">
+        <em>Role</em>
+        <span class="tag">Solutions Architect, Full stack developer</span>
+      </div>
+
+      <div class="tags">
+        <em>Duration</em>
+        <span class="tag">3 months (2017)</span>
+      </div>
+
+      <div class="tags">
+        <em>Frontend</em>
+        <span class="tag">Responsive</span>
+        <span class="tag">Flexbox</span>
+        <span class="tag">CSS Modules</span>
+        <span class="tag">ES6</span>
+        <span class="tag webpack">Webpack</span>
+      </div>
+
+      <div class="tags">
+        <em>Platform</em>
+        <span class="tag">SharePoint 2013 online (Office 365)</span>
+        <span class="tag">Managed Metadata</span>
+        <span class="tag">User Profiles</span>      
+      </div>
+      <input type="checkbox" name="details" id="p1" />
+
+      <p>The biggest in its market, this 2000 employee client wanted a fresh, modern and quick to go live intranet. After being stuck two years with a project that never went live.</p>
+        
+      <p>The mood became even more reserved when I decided to do a full rewrite without reusing any of the existing solution, but quickly turned around when the biggest piece of the project was demoed on week 3 of the delivery phase. It was definetely not the easy path (full rewrite) but the most rewarding one.</p>
+      <p>The quick turnaround made most departments to call for a series of new features, which are still being added months after the original project was completed, from migrating old apps to the new platform to creating new solutions that helped their teams to work better together</p>
+
+    </div>
+
+    <div class="project">
+      <h3>Market Research Association</h3>
+
+      <div class="tags">
+        <em>Type</em>
+        <span class="tag">Intranet</span>
+      </div>
+
+      <div class="tags">
+        <em>Role</em>
+        <span class="tag">Solutions Architect, Full stack developer</span>
+      </div>
+
+      <div class="tags">
+        <em>Duration</em>
+        <span class="tag">3.5 months (2017)</span>
+      </div>
+
+      <div class="tags">
+        <em>Frontend</em>
+        <span class="tag">Responsive</span>
+        <span class="tag">Flexbox</span>
+        <span class="tag">CSS Modules</span>
+        <span class="tag">ES6</span>
+        <span class="tag webpack">Webpack</span>
+      </div>
+
+      <div class="tags">
+        <em>Platform</em>
+        <span class="tag">SharePoint 2013 online (Office 365)</span>
+        <span class="tag">Managed Metadata</span>
+        <span class="tag">User Profiles</span>
+        <span class="tag">Office Video</span>
+      </div>
+
+      <input type="checkbox" name="details" id="p1" />
+
+      <p>After going about with a couple Intranets in a Box with not success, this client wanted to see the elusive intranet project go live in a short schedule, by presenting the first iteration with a fully funcional custom design, corporate communications portal and homepage.</p>
+      <p>Following a beta go live, a few more pieces of the SharePoint Platform were integrated via REST API to the solution, namely<span class="tag">Delve</span> for User Profiles and<span class="tag">Office Video</span> for its multimedia gallery.</p>
+
+    <!-- </div>
     <h2>Other work</h2>
 
     <div class="project">
-      <h3>Meeting Maker to Office 365</h3>
+      <h2>Meeting Maker to Office 365</h2>
       <p>What to do when the Calendar software used by 5,000 students gets discontinued and two versions prior to that closes
         all means of accessing its encrypted database? You build a bot that simulate user clicks, of course. By logging as
         every user during the migration window, the bot generated an ICS export of a user's entire calendar and pushed it
@@ -275,7 +375,7 @@ Since you are here, you get to read one crazy story from each project, enjoy!
     </div>
 
     <div class="project">
-      <h3>Top 1,000,000 + Reddot?</h3>
+      <h2>Top 1,000,000 + Reddot?</h2>
       <p>This project wanted to figure out customers running Reddot CMS to be potentially approached to a move to the Sitecore
         platform.
       </p>
@@ -284,10 +384,10 @@ Since you are here, you get to read one crazy story from each project, enjoy!
 
       <div class="tags">
         Backend
-        <span class="tag">SharePoint Search Web Page Crawler</span>
+        <span class="tag">SharePoint Search Website Crawler</span>
       </div>
 
-    </div>
+    </div> -->
 
   </aside>
 </body>
