--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="tags">
         <em>TYPE</em>
-        <span class="tag">Public-facing website</span>
+        <span class="tag">Public-facing website [Catalog/Advanced Search]</span>
       </div>
 
       <div class="tags">
@@ -127,7 +127,7 @@
 
       <div class="tags">
         <em>TYPE</em>
-        <span class="tag">Public-facing website</span>
+        <span class="tag">Public-facing website [Knowledge Base]</span>
       </div>
 
       <div class="tags">
@@ -137,7 +137,7 @@
 
       <div class="tags">
         <em>Duration</em>
-        <span class="tag">1 month (2018)</span>
+        <span class="tag">2 months (2017-2018)</span>
       </div>
 
       <div class="tags">
