--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
       <input type="checkbox" name="details" id="p1" />
 
       <div class="details">
-        <p>So many intranets in a box, but what happens when the client wants it all custom? With a pure frontend solution,
+        <p>So many intranets in a box, but what happens when the client wants it all custom? With a pure client-side frontend solution,
           this project was able to keep their existing platform free from .NET customizations making their migration path
           in the future a breeze.</p>
         <p>The goal was to discontinue use of Level CMS where several custom applications and integrations were running. By
           moving these integrations to different SharePoint features such as
           <span class="tag">BCS</span>,
           <span class="tag">User Profiles</span> and
-          <span class="tag">Service Jobs</span> the amount of custom code was reduces drastically.
+          <span class="tag">Service Jobs</span> the amount of custom .NET code was reduced drastically.
       </div>
 
     </div>
