--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
 
         <div class="tags">
           <em>Frontend</em>
+          <span class="tag">Design</span>
           <span class="tag">Responsive</span>
           <span class="tag">Flexbox</span>
           <span class="tag">CSS Modules</span>
@@ -340,6 +341,7 @@
 
         <div class="tags">
           <em>Frontend</em>
+          <span class="tag">Design</span>
           <span class="tag">Responsive</span>
           <span class="tag">Flexbox</span>
           <span class="tag">CSS Modules</span>
@@ -364,46 +366,8 @@
           namely
           <span class="tag">Delve</span> for User Profiles and
           <span class="tag">Office Video</span> for its multimedia gallery.</p>
-
-        <!-- </div>
-    <h2>Other work</h2>
-
-    <div class="project">
-      <h2>Meeting Maker to Office 365</h2>
-      <p>What to do when the Calendar software used by 5,000 students gets discontinued and two versions prior to that closes
-        all means of accessing its encrypted database? You build a bot that simulate user clicks, of course. By logging as
-        every user during the migration window, the bot generated an ICS export of a user's entire calendar and pushed it
-        to Outlook on Office 365 using the Exchange Services API, over a weekend all students and staff gained fresh, intact
-        calendars in the new platform as if nothing happened.</p>
-
-      <div class="tags">
-        Extraction Bot
-        <span class="tag">Windows Forms</span>
-        <span class="tag">Low Level Win32 Input APIs</span>
-      </div>
-
-      <div class="tags">
-        Backend
-        <span class="tag">Exchange Web Services</span>
-        <span class="tag">iCalendar.NET</span>
       </div>
     </div>
-
-    <div class="project">
-      <h2>Top 1,000,000 + Reddot?</h2>
-      <p>This project wanted to figure out customers running Reddot CMS to be potentially approached to a move to the Sitecore
-        platform.
-      </p>
-      <p>It started with the top 1,000,000 Alexa sites list reduced to a few hundred results by crawling all these websites
-        and writing a quick tool to find evidence of the target platform in its homepage sources.</p>
-
-      <div class="tags">
-        Backend
-        <span class="tag">SharePoint Search Website Crawler</span>
-      </div>
-
-    </div> -->
-      </div>
   </aside>
 
 </body>
