--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
         <div class="tags">
           <em>Role</em>
-          <span class="tag">Solutions Architect, Full stack developer</span>
+          <span class="tag">UX designer, Solutions Architect, Full stack developer</span>
         </div>
 
         <div class="tags">
@@ -331,7 +331,7 @@
 
         <div class="tags">
           <em>Role</em>
-          <span class="tag">Solutions Architect, Full stack developer</span>
+          <span class="tag">UX designer, Solutions Architect, Full stack developer</span>
         </div>
 
         <div class="tags">
