--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <div class="tags">
           <em>Role</em>
-          <span class="tag">Full stack developer</span>
+          <span class="tag">UX designer, Solutions Architect, Full stack developer</span>
         </div>
 
         <div class="tags">
