--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@
           to how the company is doing financially to a Top Partner that uses the Matter and Billing systems to work on a
           new case.</p>
 
+        <p>Combining all the corporate communications with a powerful integration with financials, billing, knowledge base and
+          people finder, partners work directly on the portal on a daily basis.</p>
       </div>
 
       <div class="project">
