--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <div class="tags">
           <em>Duration</em>
-          <span class="tag">6 months (2017)</span>
+          <span class="tag">8 months (2017-2018)</span>
         </div>
 
         <div class="tags">
