--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <div class="tags">
           <em>Duration</em>
-          <span class="tag">2 months (2017)</span>
+          <span class="tag">3 months (2017-2018)</span>
         </div>
 
         <div class="tags">
