--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:700,900|Lato" rel="stylesheet">
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenLite.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/easing/EasePack.min.js"></script>
 </head>
 
 <body>
+    <canvas id="demo-canvas"></canvas>
   <main>
     <article>
       <h1>Hi.
@@ -26,7 +29,7 @@
       <p>I partner with project teams to deliver complete, progressive Web solutions across the globe. I put focus on responsive
         design, performance and extensibility while always using the latest web technologies.</p>
       <p>Are you looking for someone who will care about all aspects of the project from the initial estimation, design and
-        user experience, to how clean, maintainable, future-proof the code is? You've found it.</p>
+        user experience, to how clean, maintainable, future-proof the code is? <b>You've found it.</b></p>
       <p>Here you can see some of my work in no particular order, and if you like it there's only one next step: </p>
       <div class="❤️">
 
@@ -372,6 +375,7 @@
     </div>
   </aside>
 
+  <script src="script.js"></script>
 </body>
 
 </html>
