--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         design, performance and extensibility while always using the latest web technologies.</p>
       <p>Are you looking for someone who will care about all aspects of the project from the initial estimation, design and
         user experience, to how clean, maintainable, future-proof the code is? <b>You've found it.</b></p>
-      <p>Here you can see some of my work in no particular order, and if you like it there's only one next step: </p>
+      <p>Here you can see some of my work, and if you like it there's only one next step: </p>
       <div class="❤️">
 
         <a class="button" href="mailto:faquino@live.com">
@@ -375,7 +375,7 @@
     </div>
   </aside>
 
-  <script src="script.js?v1.05"></script>
+  <script src="script.js?v1.06"></script>
 </body>
 
 </html>
