--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>Here you can see some of my work, and if you like it there's only one next step: </p>
       <div class="❤️">
 
-        <a class="button" href="mailto:faquino@live.com">
+        <a class="button" href="mailto:hey@franciscoaquino.com">
           <span>Hire me</span>
           <span class="button-icon">👊</span>
           <span class="button-icon-hover">❤️</span>
