--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         <b>Francisco Aquino</b> here,
         <b>Full Stack Developer</b> &amp;
         <b>Solutions Architect</b>.</h1>
-      <p>I partner with project teams to deliver complete, progressive Web solutions across the globe. I put focus on responsive
-        design, performance and extensibility while always using the latest web technologies.</p>
-      <p>Are you looking for someone who will care about all aspects of the project from the initial estimation, design and
-        user experience, to how clean, maintainable, future-proof the code is? <b>You've found it.</b></p>
+      <p>I build things with Typescript, React, NextJS, Tailwind and similar architectures on top of the many cloud platforms delivering the fastest website experiences on the planet.</p>
+      <p>Are you looking for someone who will care about all aspects of the project? Bridge all aspects of the solution and give confidence the technology can generate value? <b>You've found it.</b></p>
       <p>Here you can see some of my work, and if you like it there's only one next step: </p>
       <div class="❤️">
 
@@ -50,10 +48,9 @@
       <h2>Latest work
       </h2>
 
-      <!-- 
-    <h2>Work as
-      <b>Full Stack Developer</b>
-    </h2> -->
+    <h3>
+      Warning: this list is greatly outdated, please reach out for my latest projects.
+    </h3>
 
       <div class="project">
         <h3>Auto Aftermarket Retailer</h3>
